crates/tokmd-analysis-format/tests/snapshots/snapshot_w70__w70_analysis_md_archetype_topics.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w70.rs
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Archetype

- Kind: `monorepo`
- Evidence: `Cargo.toml`, `package.json`

## Topics

- Overall: `systems, cli`
