crates/tokmd-analysis-format/tests/snapshots/snapshot_w70__w70_analysis_md_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w70.rs
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
