crates/tokmd-analysis-format/tests/snapshots/snapshot_w70__w70_analysis_md_with_derived.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w70.rs
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Totals

|Files|Code|Comments|Blanks|Lines|Bytes|Tokens|
|---:|---:|---:|---:|---:|---:|---:|
|8|1200|150|80|1430|12000|3000|

## Ratios

|Metric|Value|
|---|---:|
|Doc density|11.1%|
|Whitespace ratio|5.6%|
|Bytes per line|8.39|

### Whitespace ratio by language

|Lang|Blank%|Blanks|Code+Comments|
|---|---:|---:|---:|

### Verbosity by language

|Lang|Bytes/Line|Bytes|Lines|
|---|---:|---:|---:|

## Distribution

|Count|Min|Max|Mean|Median|P90|P99|Gini|
|---:|---:|---:|---:|---:|---:|---:|---:|
|8|30|490|178.75|150.00|490.00|490.00|0.3500|

## File size histogram

|Bucket|Min|Max|Files|Pct|
|---|---:|---:|---:|---:|
|Small|0|100|4|50.0%|
|Medium|101|500|4|50.0%|

## Top offenders

### Largest files by lines

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|
|src/engine.rs|Rust|490|400|4000|1000|13.0%|8.16|

### Largest files by tokens

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Largest files by bytes

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Least documented (min LOC)

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Most dense (bytes/line)

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

## Structure

- Max depth: `5`
- Avg depth: `2.50`

## Test density

- Test lines: `200`
- Prod lines: `1000`
- Test ratio: `20.0%`

## Boilerplate ratio

- Infra lines: `80`
- Logic lines: `1350`
- Infra ratio: `5.9%`

## Polyglot

- Languages: `3`
- Dominant: `Rust` (77.0%)
- Entropy: `0.8500`

## Reading time

- Minutes: `71.50` (20 lines/min)

## Integrity

- Hash: `bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb` (`blake3`)
- Entries: `8`
