crates/tokmd-analysis-format/tests/snapshots/snapshot_w70__w70_analysis_mermaid_with_imports.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_w70.rs
expression: out
---
graph TD
  engine -->|5| api
  api -->|3| types
  engine -->|2| types
